Automatically backed up by Learn

--- a/app/views/repositories/search.html.erb
+++ b/app/views/repositories/search.html.erb
@@ -5,5 +5,10 @@
   <%= submit_tag "Search Github!" %>
 <% end %>
 
-<%= @body
- %>
+<% if @repos %>
+  <ul>
+    <% @repos.each do |repo| %>
+      <li><%= repo["name"] %> ::  <%= repo["description"] %> :: <%= link_to repo["html_url"], repo["html_url"] %></li>
+    <% end %>
+  </ul>
+<% end %>
